Flag user generated content as inappropriate
The app store requires a way flag any user generated content as
inappropriate. Clients can now flag markers as inappropriate.
Flagged markers will remain hidden from public view until reviewed
by an admin. An admin will be able to undo the flag if the content
is deemed appropriate.

The admin portion will follow in a separate pull request.
