# app/controllers/api/v1/connect/markers_controller.rb
@@ -4,11 +4,11 @@ module Api
   module V1
     module Connect
       class MarkersController < ApplicationController
-        before_action :check_device_uuid, only: [:create, :update]
+        include DeviceIdentifiable
 
         def index
           @filters = {}
-          @markers = ::Connect::Marker.unresolved.all
+          @markers = ::Connect::Marker.unresolved.not_flagged.all
           apply_filters
         end
 
@@ -31,18 +31,6 @@ module Api
         end
 
         private
-
-        def device_uuid
-          request.headers['HTTP_DISASTERCONNECT_DEVICE_UUID']
-        end
-
-        def missing_device_uuid
-          render(json: { device_uuid: ['Must be set with DisasterConnect-Device-UUID header'] }, status: :forbidden)
-        end
-
-        def check_device_uuid
-          missing_device_uuid if device_uuid.blank?
-        end
 
         def apply_filters
           category_filter
